--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
  
-  "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
-  ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.js" }
+  ],
 }
